kubernetes/service-application.yml
apiVersion: v1
kind: Service
metadata:
  name: service-application
  namespace: devops-namespace
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
