kubernetes/statefulset-database.yml
apiVersion: v1
kind: Service
metadata:
  name: statefulset-database
  namespace: devops-namespace
spec:
  selector:
    app: statefulset-database
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 5432
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-database
  namespace: devops-namespace
spec:
  serviceName: statefulset-database
  replicas: 1
  selector:
    matchLabels:
      app: statefulset-database
  template:
    metadata:
      labels:
        app: statefulset-database
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
